--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 
 <head>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
-	<script src="./class.js"></script>
+	<script src="./mayr-class.js"></script>
+	<script src="./grass.js"></script>
+	<script src="./xotaker.js"></script>
+	<script src="./gishatich.js"></script>
+	<script src="./aryuc.js"></script>
+	<script src="./pat.js"></script>
 	<script type="text/javascript" src="./script.js"></script>
 	<meta charset="utf8">
 </head>
